# POC_kinesis

./: .gitignore  gitignore  pyproject.toml  run_consumer.py  run_producer.py  run_productor.py
poc_kinesis/: consumer.py  producer.py
poc_kinesis/api/: consumer.py  producer.py
poc_kinesis/service/: consumer_service.py  producer_service.py
tests/: test_poc_kinesis.py
