[tool.poetry]
name = "poc-kinesis"
version = "0.1.0"
description = "POC of AWS kinesis"
authors = ["bruno Xavier <bruno.xavier@calindra.com.br>"]

[tool.poetry.dependencies]
python = "^3.9.6"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
boto3 = "^1.18.33"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
producer = 'run_producer:start'
consumer = 'run_consumer:start'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

